# ml-assistant

./: .gitignore  README.md  REAMDE.md  agentflow.ipynb  apistox_dataset_report.md  helpers.py  logging_utils.py  main.py  pyproject.toml  requirements.txt  run.sh  start_agent.py  state.py  test.ipynb  test.py
analyst/: model.py  nodes.py  tools.py
cleaner/: detection_and_cleaning.py  main.py
config/: model.py
config/config_dicts/: cleaning_handler.py  encoding_handler.py  filter_chooser.py  final_chooser.py  hp_chooser.py  imbalance_handler.py  metric_chooser.py  model_chooser.py  null_handler.py  sampling_query.py  scaling_handler.py  skew_handler.py
frontend/: app.py  messages.json
preprocessor/: model.py  nodes.py  null_handler_tools.py  tools.py
preprocessor/config/: encoding_handler.py  imbalance_handler.py  metric_chooser.py  model_chooser.py  null_handler.py  scaling_handler.py  skew_handler.py
processing/: config.py  encoding_handling.py  inference_pipeline.py  llm_call.py  main.py  null_handling.py
