[project]
name = "ml-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Youssef Tarek",email = "yussef0212@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

