[project]
name = "ml-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Youssef Tarek",email = "yussef0212@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "langchain (>=1.2.9,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "river (>=0.23.0,<0.24.0)",
    "category-encoders (>=2.9.0,<3.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "langchain-mistralai (>=1.1.3,<2.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "langchain-anthropic (>=1.4.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

